--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "predis/predis": "^1.1",
         "prewk/xml-string-streamer": "^1.2",
         "yajra/laravel-datatables": "^1.5"
     },
